restructure parsing, fix some parsing false positives, and some other stuff

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
 				"--inspect-brk",
 				"--allow-all"
 			],
-			"attachSimplePort": 9229
+			"attachSimplePort": 9229,
+			"stopOnEntry": false
 		}
 	]
 }
